hphp/hack/test/typecheck/concrete_redeclare_concrete_class_constant_bad.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

class A {
  const int P = 9;
}

class B extends A {
  const arraykey P = 5;
}
